<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label" translatable="false">Simpletask WebDAV</string>
    <string name="flavour_settings_label" translatable="false">Webdav</string>
    <string name="account_type">nl.mpcjanssen.simpletask.webdav</string>
    <string name="login_unsuccesfull">Login unsuccessfull</string>
    <string name="unexpected_result">Unexpected result</string>
    <string name="webdav_login_screen_button">Log in to Webdav</string>
    <string name="webdav_logging_screen_button">View log</string>
    <string name="webdav_login_server_url">Webdav URL</string>
    <string name="webdav_login_username">Username</string>
    <string name="webdav_login_password">Password</string>
    <string name="webdav_logout_message">Please make sure you have synced all changes with the server or
        shared your complete task list if not connected to the server.\n
        Any changes that have not been synced will be lost after logging out.</string>
    <string name="webdav_logout_pref_summary">Log out.</string>
    <string name="webdav_logout_pref_title">Log out</string>
</resources>
